Add loyalty campaigns, accounting, bills, and platform analytics.
Introduce STAMP_CARD/SPEND_THRESHOLD campaign backend with rewards and claims, plus table bills, waiter commissions, user accounting, site visit tracking, platform feedback, and trial/catalog updates.

Co-authored-by: Cursor <cursoragent@cursor.com>